--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,7 @@
 		"declaration": true,
 		"sourceMap": true,
 		"skipLibCheck": true,
+		"types": ["node"],
 		"outDir": "./dist/",
 	},
 	"include": [
