--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "node": ">=20.15"
   },
   "main": "index.js",
+  "publishConfig": { "access": "public" },
   "scripts": {
     "build": "npx rimraf dist && tsc && gulp build:icons",
     "dev": "tsc --watch",
