--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@senseflow-io/n8n-nodes-senseflow",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "n8n community node for SenseFlow - simple agentic phone calls",
   "keywords": [
     "n8n-community-node-package"
@@ -18,6 +18,7 @@
   "engines": {
     "node": ">=20.15"
   },
+  "main": "index.js",
   "publishConfig": { "access": "public" },
   "scripts": {
     "build": "npx rimraf dist && tsc && gulp build:icons",
